# vpn-bot

./: .gitignore  TODO  main.py  pyproject.toml  vless_config_generator.py
vpn_manager/: manage.py
vpn_manager/config/: env_constants.py  settings.py
vpn_manager/telegram_bot/: __init__.py  main.py  middleware.py
vpn_manager/telegram_bot/handlers/: access_control.py  admin.py  config_manager.py  help.py  help_handler.py  start.py
vpn_manager/telegram_bot/helpers/: config_generator.py
vpn_manager/telegram_bot/middleware/: authorization.py
vpn_manager/vpn/: admin.py
vpn_manager/vpn/managers/: amneziawg_manager.py  base_config_manager.py  vless_manager.py
vpn_manager/vpn/managers/xray/: command_pb2_grpc.py
vpn_manager/vpn/migrations/: 0001_initial.py  0002_vpnuser_is_admin.py  0003_vpnuser_full_name_alter_vpnuser_telegram_id_and_more.py  0004_alter_vpnuser_full_name_alter_vpnuser_username.py  0005_alter_vpnuser_username.py  0006_alter_vpnuser_username.py  0007_amneziawgconfig_private_key_alter_vpnuser_is_admin.py  0008_amneziawgconfig_allowed_ip_and_more.py  0009_alter_amneziawgconfig_client_id_and_more.py  0010_accessrequest.py  0011_amneziawgconfig_ip_address_vlessconfig_ip_address.py  0012_rename_ip_address_amneziawgconfig_server_ip_address_and_more.py  0013_vpnserver_remove_amneziawgconfig_server_ip_address_and_more.py  0014_amneziawgconfig_server_vlessconfig_server.py  0015_serverprotocol_config_filename_and_more.py  0016_serverprotocol_wg_preshared_key.py  0017_remove_vpnserver_issued_configs_and_more.py  0018_alter_serverprotocol_volumes_supported.py  0019_vpnserver_location.py  0020_vlessconfig_config_email.py
vpn_manager/vpn/models/: configs.py  servers.py  users.py
vpn_manager/vpn/templates/admin/vpn/vpnuser/: change_form.html
vpn_manager/vpn/utils/: amneziawg_utils.py  ssh_utils.py  vless_utils.py
vpn_manager/vpn/xray_api/: __init__.py  exceptions.py  xray_add_user_grpc.py  xray_stats_grpc.py
vpn_manager/vpn/xray_api/grpc_generated_files/: account_pb2_grpc.py  command_pb2.py  config_pb2.py  handler_pb2.py  handler_pb2_grpc.py  user_pb2.py
