[project]
name = "vpn-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "django>=5.2.3",
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
