[project]
name = "vpn-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "django>=5.2.3",
    "django-stubs==1.2.0",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "paramiko>=3.5.1",
    "psycopg>=3.2.9",
    "python-dotenv>=1.1.1",
    "qrcode>=8.2",
    "watchfiles>=1.1.0",
    "wgconfig>=1.1.0",
    "wireguard-tools>=0.5.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "C90",  # maccabe
    "COM",  # flake8-commas
    "D",    # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",    # pycodestyle
    "ERA",  # flake8-eradicate
    "EXE",  # flake8-executable
    "F",    # pyflakes
    "FBT",  # flake8-boolean-trap
    "FLY",  # pyflint
    "FURB", # refurb
    "G",    # flake8-logging-format
    "I",    # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "LOG",  # flake8-logging
    "N",    # pep8-naming
    "PERF", # perflint
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # flake8-use-pathlib
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RSE",  # flake8-raise
    "RUF",  # ruff
    "S",    # flake8-bandit
    "SIM",  # flake8-simpify
    "SLF",  # flake8-self
    "SLOT", # flake8-slots
    "T100", # flake8-debugger
    "TRY",  # tryceratops
    "UP",   # pyupgrade
    "W",    # pycodestyle
    "YTT",  # flake8-2020
]
ignore = [
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in `__init__`
    "D202",    # 1 blank line required before function docstring
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "PLR6201", # Use a set literal when testing for membership
    "RET504",  # Unnecessary variable assignment before `return` statement
    "RUF001",  # ruff unicode specific rules
    "RUF002",  # ruff unicode specific rules
    "RUF003",  # ruff unicode specific rules
    "TRY003",  # Duplicates EM101 warning
    "PTH123",  # Use pathlib instead of os.path
    "PTH107",  # Checks for uses of os.remove
]
unfixable = [
    "B",   # Avoid trying to fix flake8-bugbear violations.
    "ERA", # Avoid deleting commented-out code
]
mccabe = { max-complexity = 10 }
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
flake8-tidy-imports = { ban-relative-imports = "all" }

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
lines-after-imports = 2
